--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html> 
 	<head>
-		<title>Cleanright Cleaning Co.</title> 
-		<link rel="icon" type="image/png"href="/cleanright/icon.png">
-		<link rel="stylesheet" href="/cleanright/styles.css">
+		<title>Cleanrite Cleaning</title> 
+		<link rel="icon" type="image/png"href="/cleanrite/icon.png">
+		<link rel="stylesheet" href="/cleanrite/styles.css">
 	</head>
 	<style>
 		html{
@@ -40,10 +40,10 @@
 	</style>
 	<body>
 		<div>
-			<h2 class="align-left">Cleanright Cleaning<button id="button-home" class="align-right">Home</button><button id="button-contact" class="align-right">Contact</button><button id="button-about" class="align-right">About</button></h2>
+			<h2 class="align-left">Cleanrite Cleaning<button id="button-home" class="align-right">Home</button><button id="button-contact" class="align-right">Contact</button><button id="button-about" class="align-right">About</button></h2>
 		</div>
 		<div id="gallery" class="align-center">
-			<img src="/cleanright/icon.png" width="100px" height="75px">
+			<img src="/cleanrite/icon.png" width="100px" height="75px">
 		</div>
 		<div id="contact" class="hidden align-center">
 			<h3>Contact Information</h3>
